# raghavtech

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  supabase-multi-user-setup.sql  supabase-setup.sql  vercel.json  vite.config.js
.claude/: settings.local.json
.playwright-mcp/: page-2026-07-23T12-45-42-431Z.yml  page-2026-07-24T05-26-12-201Z.yml  page-2026-07-24T05-28-03-768Z.yml  page-2026-07-24T05-28-29-512Z.yml  page-2026-07-24T05-31-02-773Z.yml  page-2026-07-24T08-12-04-118Z.yml  page-2026-07-24T08-30-55-535Z.yml  page-2026-07-24T09-41-44-834Z.yml  sample_resume.docx
api/: README.md  compress.ts  index.py  index.ts  keep-alive.js  merge.ts  split.ts  tsconfig.json  types.ts
api/lib/: form-parser.ts  pdf-utils.ts  response.ts  validation.ts
backend/: README.md  main.py  requirements.txt
pulse/: README.md  pulse_deploy.sh
pulse/.playwright-mcp/: page-2026-07-04T06-27-47-823Z.yml  page-2026-07-04T06-32-00-465Z.yml  page-2026-07-04T10-36-59-251Z.yml  page-2026-07-04T10-37-59-369Z.yml  page-2026-07-04T10-43-32-731Z.yml  (+23 more)
pulse/api/: .env.example  Dockerfile  README.md  pyproject.toml  render.yaml
pulse/api/app/: auth.py  config.py  llm.py  main.py  schemas.py  supabase.py
pulse/api/app/intelligence/: __init__.py  breakdown.py  planner.py  priority.py  risk.py  scheduler.py
pulse/api/app/routers/: ai.py  crud.py  health.py  storage.py
pulse/supabase/: schema.sql
resume-screening-system/: DEPLOYMENT.md  Makefile  README.md
src/: App.tsx
typing-speed-test/: README.md  index.html  script.js  style.css
(+164 files in other folders)
