[project]
name = "pulse-api"
version = "0.1.0"
description = "Pulse — AI productivity backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
# Real LLM planning. Optional — the app falls back to the local engine.
llm = ["openai>=1.54"]

[tool.uv]
package = false
